test/Fail/Issue2386-a.err
Issue2386-a.agda:10.1-28: error: [InvalidBuiltin]
Wrong type of constructor of BUILTIN EQUALITY
when checking the pragma BUILTIN EQUALITY Eq
